--- a/index.html
+++ b/index.html
@@ -4,61 +4,72 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
-      <a href=""> <span>WEB</span>STUDIO</a>
-      <nav>
-        <a href="./index.html">Studio</a>
-        <a href="/contact">Contact</a>
-        <a href="/portfolio">Portfolio</a>
+  <body class="body">
+    <header class="header">
+      <a href="./index.html" class="heder-logo link">
+        <span class="header-part-logo">WEB</span>STUDIO</a
+      >
+      <nav class="header-navigation">
+        <a class="header-link link" href="./index.html">Studio</a>
+        <a class="header-link link" href="./portfolio.html">Portfolio</a>
+        <a class="header-link link" href="/contact">Contact</a>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11(000)111-11-11</a>
+      <a class="header-tel link" href="mailto:info@devstudio.com"
+        >info@devstudio.com</a
+      >
+      <a class="header-mail link" href="tel:+110001111111">+11(000)111-11-11</a>
     </header>
-    <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
-      <section>
-        <h2>Our qualities</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="benefits">
+        <h2 class="visually-hidden">Our qualities</h2>
+        <ul class="benefits-list list">
+          <li class="benefits-item">
+            <h3 class="benefits-title">Strategy</h3>
+            <p class="benefits-after-title">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Punctuality</h3>
+            <p class="benefits-after-title">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Diligence</h3>
+            <p class="benefits-after-title">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Technologies</h3>
+            <p class="benefits-after-title">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What Are We Doing</h2>
-        <ul>
-          <li>
+      <section class="examples">
+        <h2 class="examples-title">What Are We Doing</h2>
+        <ul class="examples-list list">
+          <li class="examples-item">
             <img
               src="./images/work-img-1.jpg"
               alt="example site in browser"
@@ -66,7 +77,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="examples-item">
             <img
               src="./images/work-img-2.jpg"
               alt="application on the phone"
@@ -74,7 +85,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="examples-item">
             <img
               src="./images/work-img-3.jpg"
               alt="example site"
@@ -84,55 +95,57 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
               src="./images/product-designer.jpg"
               alt="product designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-after-subtitle">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/frontend-developer.jpg"
               alt="frontend developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-after-subtitle">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/marketing.jpg"
               alt="marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-after-subtitle">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/ui-designer.jpg"
               alt="ui designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-after-subtitle">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href=""> <span>WEB</span>STUDIO</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html">
+        <span class="footer-part-logo">WEB</span>STUDIO</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
