--- a/portfolio.html
+++ b/portfolio.html
@@ -52,47 +52,92 @@
         <h2 class="visually-hidden">Services</h2>
         <ul class="services-list list">
           <li class="services-item">
-            <img src="./images/type-of-service-elm1.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm1.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Banking App Interface Concept</h3>
             <p class="services-pre-title">App</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm2.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm2.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Cashless Payment</h3>
             <p class="services-pre-title">Marketing</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm3.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm3.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Meditaion App</h3>
             <p class="services-pre-title">App</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm4.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm4.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Taxi Service</h3>
             <p class="services-pre-title">Marketing</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm5.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm5.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Screen Illustrations</h3>
             <p class="services-pre-title">Design</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm6.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm6.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Online Courses</h3>
             <p class="services-pre-title">Marketing</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm7.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm7.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Instagram Stories Concept</h3>
             <p class="services-pre-title">Design</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm8.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm8.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Organic Food</h3>
             <p class="services-pre-title">Web Site</p>
           </li>
           <li class="services-item">
-            <img src="./images/type-of-service-elm9.jpg" alt="" />
+            <img
+              src="./images/type-of-service-elm9.jpg"
+              alt=""
+              width="360"
+              height="300"
+            />
             <h3 class="services-title">Fresh Coffee</h3>
             <p class="services-pre-title">Web Site</p>
           </li>
