--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm1.jpg"
-              alt=""
+              alt="application interface"
               width="360"
               height="300"
             />
@@ -64,7 +64,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm2.jpg"
-              alt=""
+              alt="cashless payment"
               width="360"
               height="300"
             />
@@ -74,7 +74,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm3.jpg"
-              alt=""
+              alt="meditaion app"
               width="360"
               height="300"
             />
@@ -84,7 +84,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm4.jpg"
-              alt=""
+              alt="car salon"
               width="360"
               height="300"
             />
@@ -94,7 +94,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm5.jpg"
-              alt=""
+              alt="screen illustrations"
               width="360"
               height="300"
             />
@@ -104,7 +104,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm6.jpg"
-              alt=""
+              alt="the girl listens to music in headphones"
               width="360"
               height="300"
             />
@@ -114,7 +114,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm7.jpg"
-              alt=""
+              alt="instagram stories concept"
               width="360"
               height="300"
             />
@@ -124,7 +124,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm8.jpg"
-              alt=""
+              alt="organic food"
               width="360"
               height="300"
             />
@@ -134,7 +134,7 @@
           <li class="services-item">
             <img
               src="./images/type-of-service-elm9.jpg"
-              alt=""
+              alt="fresh coffee"
               width="360"
               height="300"
             />
